--- a/app/views/animals/_animal.html.erb
+++ b/app/views/animals/_animal.html.erb
@@ -97,7 +97,7 @@
 
       <div class="py-2">
         <p class="body-lg-bold-text inline">
-          <%= t('label.Birthday') %>:
+          <%= t('label.Birth Date') %>:
         </p>
         <p class="body-lg-text pl-2 inline">
           <%= show_birth_or_death_date(animal, "birth") %>
@@ -115,7 +115,7 @@
 
       <div class="py-2">
         <p class="body-lg-bold-text inline">
-          <%= t('activerecord.attributes.animal.death_date') %>:
+          <%= t('label.Death Date') %>:
         </p>
         <p class="body-lg-text pl-2 inline">
           <%= show_birth_or_death_date(animal, "death") %>
