--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -70,23 +70,26 @@
     <%= form.label :from_place %>
     <%= form.text_field :from_place, class: "input_text_field" %>
   </div>
-
+  <div id="error_scroll_place"></div>
+  <p class="body-sm-semibold-text">
+    <%= t('text.For the birth date or death date, select a year or a year, month, and day') %>
+  </p>
   <div class="my-5 mr-2">
     <div>
       <%= label_tag 'birth_year', "#{t('activerecord.attributes.animal.birth_year')}" %>
     </div>
     <div>
-      <%= select_year(@birth_year, { prompt: "#{t('text.Select Year')} ...", start_year: DateTime.now.year, end_year: DateTime.now.year - 20 }, {name: 'birth_year', :class => 'short_input_text_field'}) %>
+      <%= select_year(@birth_year, { prompt: "#{t('text.Select Year')} ...", start_year: DateTime.now.year, end_year: DateTime.now.year - 20 }, {name: 'birth_year', :class => 'short_input_text_field', "data-animal-target": "birth_year"}) %>
     </div>
   </div>
-
+  <div class="error_text" id="birthdate_error"></div>
   <div class="my-5 mr-2">
     <div>
       <%= label_tag 'birth_day', "#{t('activerecord.attributes.animal.birth_day')}" %>
     </div>
     <div class="">
-      <%= select_day(@birth_day, { field_name: 'birth_day', prefix: 'birth', prompt: "#{t('text.Select Day')} ..." }, { class: "inline short_input_text_field" }) %>
-      <%= select_month(@birth_day, { field_name: 'birth_month', prefix: 'birth', prompt: "#{t('text.Select Month')} ..." }, { class: "inline short_input_text_field" }) %>
+      <%= select_day(@birth_day, { field_name: 'birth_day', prefix: 'birth', prompt: "#{t('text.Select Day')} ..." }, { class: "inline short_input_text_field", "data-animal-target": "birth_day" }) %>
+      <%= select_month(@birth_day, { field_name: 'birth_month', prefix: 'birth', prompt: "#{t('text.Select Month')} ..." }, { class: "inline short_input_text_field", "data-animal-target": "birth_month" }) %>
     </div>
   </div>
 
@@ -95,17 +98,17 @@
       <%= label_tag 'death_year', "#{t('activerecord.attributes.animal.death_year')}" %>
     </div>
     <div class="">
-      <%= select_year(@death_year, { prompt: "#{t('text.Select Year')} ...", start_year: DateTime.now.year, end_year: DateTime.now.year - 20 }, { name: 'death_year', :class => 'short_input_text_field' }) %>
+      <%= select_year(@death_year, { prompt: "#{t('text.Select Year')} ...", start_year: DateTime.now.year, end_year: DateTime.now.year - 20 }, { name: 'death_year', :class => 'short_input_text_field', "data-animal-target": "death_year" }) %>
     </div>
   </div>
-
+  <div class="error_text" id="deathdate_error"></div>
   <div class="my-5 mr-2">
     <div>
       <%= label_tag 'death_day', "#{t('activerecord.attributes.animal.death_day')}" %>
     </div>
     <div class="">
-      <%= select_day(@death_day, { field_name: 'death_day', prefix: 'death', prompt: "#{t('text.Select Day')} ..." }, { class: "inline short_input_text_field" }) %>
-      <%= select_month(@death_month, { field_name: 'death_month', prefix: 'death', prompt: "#{t('text.Select Month')} ..." }, { class: "inline short_input_text_field" }) %>
+      <%= select_day(@death_day, { field_name: 'death_day', prefix: 'death', prompt: "#{t('text.Select Day')} ..." }, { class: "inline short_input_text_field", "data-animal-target": "death_day" }) %>
+      <%= select_month(@death_month, { field_name: 'death_month', prefix: 'death', prompt: "#{t('text.Select Month')} ..." }, { class: "inline short_input_text_field", "data-animal-target": "death_month" }) %>
     </div>
   </div>
 
