add default status

--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -20,7 +20,7 @@
 
   <div class="my-5">
     <%= form.label :animal_status_id, "#{t('activerecord.attributes.animal.animal_status_id')}(*)" %>
-    <%= form.collection_select :animal_status_id, animal_statuses, :id, :name, { include_blank: "#{t('text.Select')} ...", required: true }, { selected: "1", class: "input_text_field" } %>
+    <%= form.collection_select :animal_status_id, animal_statuses, :id, :name, { required: true, selected: "1" }, { class: "input_text_field" } %>
   </div>
 
   <div class="my-5">
