edit destroy functions

--- a/app/views/animal_statuses/_status_list.html.erb
+++ b/app/views/animal_statuses/_status_list.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag 'animal_statuss' do %>
+<%= turbo_frame_tag 'animal_statuses' do %>
   <div class="min-w-full">
     <table class="mi_table" id="desk-table">
       <thead class="border border-l-0 border-r-0 border-gray-750">
