--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -82,7 +82,7 @@
             </div>
             <div class="mb-2">
               <%= f.checkbox :sterilization_eq, class: "check_box" %>
-              <%= f.label :sterilization_eq, "#{t('activerecord.attributes.animal.sterilization')}" %>
+              <%= f.label :sterilization_eq, "#{t('activerecord.attributes.animal.sterilization')}", class: "body-sm-semibold-text" %>
             </div>
             <div class="">
               <div class="">
