--- a/app/views/animals/_animal.html.erb
+++ b/app/views/animals/_animal.html.erb
@@ -177,6 +177,11 @@
           <%= animal.graduation %>
         </p>
       </div>
+      <div>
+        <p class="body-sm-text m-2">
+          <%= updated_on_and_by(animal) %>
+        </p>
+      </div>
 
     </div>
     <div>
