rename fields in animals

--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -165,13 +165,13 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :description %>
-    <%= form.text_field :description, class: "input_text_field" %>
+    <%= form.label :distinctive_feature %>
+    <%= form.text_field :distinctive_feature, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :history %>
-    <%= form.text_field :history, class: "input_text_field" %>
+    <%= form.label :medical_history %>
+    <%= form.text_field :medical_history, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
