--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,13 +14,17 @@
         <% if authenticated? %>
           <div class="hidden lg:ml-6 lg:block">
             <div class="flex space-x-4">
+              <div class="flex items-center justify-between">
+                <div class="nav-top-link">
+                  <%= link_to t('menu.header.animals'), animals_path, class: "#{class_names(active: current_page?(cart_path))}" %>
+                </div>
+              </div>
               <div class="group relative cursor-pointer">
                 <div class="flex items-center justify-between">
-                  <%= content_tag :span, t('menu.header.citizens'), class: "nav-top-link" %>
+                  <%= content_tag :span, t('menu.header.аdditions'), class: "nav-top-link" %>
                 </div>
                 <div class="invisible absolute z-50 flex w-full flex-col bg-green-900 py-1 group-hover:visible" onClick="">
                   <%= link_to t('menu.header.types'), animal_types_path, class: "nav-sub-link" %>
-                  <%= link_to t('menu.header.animals'), animals_path, class: "nav-sub-link" %>
                   <%= link_to t('menu.header.aviaries'), aviaries_path, class: "nav-sub-link" %>
                   <%= link_to t('menu.header.statuses'), animal_statuses_path, class: "nav-sub-link" %>
                 </div>
