add size to Animal

--- a/app/views/animals/_animal.html.erb
+++ b/app/views/animals/_animal.html.erb
@@ -80,6 +80,15 @@
       </div>
 
       <div class="py-2">
+      <p class="body-lg-bold-text inline">
+          <%= t('activerecord.attributes.animal.size') %>:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.size %>
+        </p>
+      </div>
+
+      <div class="py-2">
         <p class="body-lg-bold-text inline">
           <%= t('activerecord.attributes.animal.arival_date') %>:
         </p>
