--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -81,6 +81,10 @@
               <%= f.select(:gender_eq, gender_lists, { include_blank: "#{t('text.Select')} ..." }, { class: "filter_select" }) %>
             </div>
             <div class="mb-2">
+              <%= f.label :size, class: "fancy_label" %>
+              <%= f.select(:size_eq, size_list, { include_blank: "#{t('text.Select')} ..." }, { class: "filter_select" }) %>
+            </div>
+            <div class="mb-2">
               <%= f.checkbox :sterilization_eq, class: "check_box" %>
               <%= f.label :sterilization_eq, "#{t('activerecord.attributes.animal.sterilization')}", class: "body-sm-semibold-text" %>
             </div>
