--- a/app/views/admin_users/index.html.erb
+++ b/app/views/admin_users/index.html.erb
@@ -3,7 +3,7 @@
   <% content_for :title, t('text.admin_users')  %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl"><%= t('text.Admin Users') %></h1>
+    <h1 class="font-bold text-4xl"><%= t('text.Admins') %></h1>
     <%= link_to t('menu.new'), new_admin_user_path, class: "primary_button" %>
   </div>
 
