fix small things

--- a/app/views/animal_statuses/index.html.erb
+++ b/app/views/animal_statuses/index.html.erb
@@ -7,7 +7,7 @@
     <%= link_to t('menu.new'), new_animal_status_path, class: "primary_button" %>
   </div>
 
-  <div id="animal_types" class="min-w-full">
+  <div id="animal_statuses" class="min-w-full">
     <%= render 'status_list' %>
   </div>
 </div>
