--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,12 @@
             <div class="flex space-x-4">
               <div class="flex items-center justify-between">
                 <div class="nav-top-link">
-                  <%= link_to t('menu.header.animals'), animals_path, class: "#{class_names(active: current_page?(cart_path))}" %>
+                  <%= link_to t('menu.header.animals'), animals_path, class: "#{class_names(active: current_page?(animals_path))}" %>
+                </div>
+              </div>
+              <div class="flex items-center justify-between">
+                <div class="nav-top-link">
+                  <%= link_to t('menu.header.medicine'), medical_procedures_path, class: "#{class_names(active: current_page?(medical_procedures_path))}" %>
                 </div>
               </div>
               <div class="group relative cursor-pointer">
@@ -24,18 +29,11 @@
                   <%= content_tag :span, t('menu.header.аdditions'), class: "nav-top-link" %>
                 </div>
                 <div class="invisible absolute z-50 flex w-full flex-col bg-green-900 py-1 group-hover:visible" onClick="">
-                  <%= link_to t('menu.header.types'), animal_types_path, class: "nav-sub-link" %>
+                  <%= link_to t('menu.header.animal_types'), animal_types_path, class: "nav-sub-link" %>
+                  <%= link_to t('menu.header.animal_statuses'), animal_statuses_path, class: "nav-sub-link" %>
                   <%= link_to t('menu.header.aviaries'), aviaries_path, class: "nav-sub-link" %>
-                  <%= link_to t('menu.header.statuses'), animal_statuses_path, class: "nav-sub-link" %>
-                </div>
-              </div>
-              <div class="group relative cursor-pointer">
-                <div class="flex items-center justify-between">
-                  <%= content_tag :span, t('menu.header.medicine'), class: "nav-top-link" %>
-                </div>
-                <div class="invisible absolute z-50 flex w-full flex-col bg-green-900 py-1 group-hover:visible" onClick="">
-                  <%= link_to t('menu.header.types'), procedure_types_path, class: "nav-sub-link" %>
-                  <%= link_to t('menu.header.procedures'), medical_procedures_path, class: "nav-sub-link" %>
+                  <%= link_to t('menu.header.procedure_types'), procedure_types_path, class: "nav-sub-link" %>
+                  <%= link_to t('menu.header.admins'), admin_users_path, class: "nav-sub-link" %>
                 </div>
               </div>
               <div class="flex items-center justify-between">
