--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -5,7 +5,11 @@
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Animals') %></h1>
     <h1><%= show_status(@status_id) %></h1>
-    <%= link_to t('menu.new'), new_animal_path, class: "primary_button" %>
+    <% if policy(Animal).new? %>
+      <%= link_to t('menu.new'), new_animal_path, class: "primary_button" %>
+    <% else %>
+      <div></div>
+    <% end %>
   </div>
 
   <div>
