--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,19 +11,19 @@
             </div>
           <% end %>
         </div>
-        <% if authenticated? %>
-          <div class="hidden lg:ml-6 lg:block">
-            <div class="flex space-x-4">
-              <div class="flex items-center justify-between">
-                <div class="nav-top-link">
-                  <%= link_to t('menu.header.animals'), animals_path, class: "#{class_names(active: current_page?(animals_path))}" %>
-                </div>
+        <div class="hidden lg:ml-6 lg:block">
+          <div class="flex space-x-4">
+            <div class="flex items-center justify-between">
+              <div class="nav-top-link">
+                <%= link_to t('menu.header.animals'), animals_path, class: "#{class_names(active: current_page?(animals_path))}" if policy(Animal).index? %>
               </div>
-              <div class="flex items-center justify-between">
-                <div class="nav-top-link">
-                  <%= link_to t('menu.header.medicine'), medical_procedures_path, class: "#{class_names(active: current_page?(medical_procedures_path))}" %>
-                </div>
+            </div>
+            <div class="flex items-center justify-between">
+              <div class="nav-top-link">
+                <%= link_to t('menu.header.medicine'), medical_procedures_path, class: "#{class_names(active: current_page?(medical_procedures_path))}" %>
               </div>
+            </div>
+            <% if authenticated? %>
               <div class="group relative cursor-pointer">
                 <div class="flex items-center justify-between">
                   <%= content_tag :span, t('menu.header.аdditions'), class: "nav-top-link" %>
@@ -44,26 +44,26 @@
                   <% end %>
                 </div>
               </div>
-              <div class="group relative cursor-pointer">
-                <div class="flex items-center justify-between">
-                  <% if I18n.locale == :en %>
-                    <%= link_to t('menu.languages.ru'), change_locale_path(:ru), class: "nav-top-link" %>
-                  <% else %>
-                    <%= link_to t('menu.languages.en'), change_locale_path(:en), class: "nav-top-link" %>
-                  <% end %>
-                </div>
+            <% end %>
+            <div class="group relative cursor-pointer">
+              <div class="flex items-center justify-between">
+                <% if I18n.locale == :en %>
+                  <%= link_to t('menu.languages.ru'), change_locale_path(:ru), class: "nav-top-link" %>
+                <% else %>
+                  <%= link_to t('menu.languages.en'), change_locale_path(:en), class: "nav-top-link" %>
+                <% end %>
               </div>
             </div>
           </div>
-        <% end %>
+        </div>
       </div>
 
       <div class="hidden lg:ml-6 lg:block">
         <div class="flex items-center">
-          <% if authenticated? %>
+          <% if current_user %>
             <div>
               <div class="text-white body-sm-text pb-1"><%= current_user.email_address %></div>
-              <%= link_to "Sign Out", session_path, 
+              <%= link_to "Sign Out hell", session_path, 
                 method: :delete, 
                 data: { turbo_method: :delete, confirm: "Are you sure?" },
                 class: "sign_button" 
