--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -2,13 +2,15 @@
   <div class="grid grid-cols-1 lg:grid-cols-2 items-center">
     <h1><%= @animal.animal_type.name %> (<%= @animal.animal_status.name %>)</h1>
     <div class="lg:grid lg:justify-items-end">
-      <%= link_to t('forms.buttons.edit'), edit_animal_path(@animal), class: "primary_button mb-2" %>
+      <%= link_to t('forms.buttons.edit'), edit_animal_path(@animal), class: "primary_button mb-2" if policy(Animal).edit? %>
       <div class="mt-2">
-        <%= link_to animal_path(@animal), data: { turbo_confirm: t('text.Are you sure?'), turbo_method: :delete} do %>
-          <span class="tertiary_button">
-            <i class="fa fa-times" aria-hidden="true"></i>
-            <%= t('forms.buttons.delete') %>
-          </span>
+        <% if policy(Animal).destroy? %>
+          <%= link_to animal_path(@animal), data: { turbo_confirm: t('text.Are you sure?'), turbo_method: :delete} do %>
+            <span class="tertiary_button">
+              <i class="fa fa-times" aria-hidden="true"></i>
+              <%= t('forms.buttons.delete') %>
+            </span>
+          <% end %>
         <% end %>
       </div>
       <%= link_to animals_path do %>
@@ -19,20 +21,22 @@
       <% end %>
     </div>
   </div>
-  <%= link_to "PDF", animal_path(@animal, format: :pdf), class: "primary_button mb-2" %>
+  <%= link_to "PDF", animal_path(@animal, format: :pdf), class: "primary_button mb-2" if policy(Animal).edit? %>
   <div class="grid grid-cols-1 lg:grid-cols-2">
     <div class="grid lg:col-span-2">
       <%= render @animal %>
     </div>
   </div>
 
-  <div class="container p-2 rounded-lg shadow-lg text-xl mb-20 bg-gray-50">
-    <h2 class="mb-4"><%= t('text.Notes') %>:</h2>
-    <%= render partial: "notes/form", locals: { note: Note.new, noteable: @animal } %>
+  <% if policy(Animal).edit? %>
+    <div class="container p-2 rounded-lg shadow-lg text-xl mb-20 bg-gray-50">
+      <h2 class="mb-4"><%= t('text.Notes') %>:</h2>
+      <%= render partial: "notes/form", locals: { note: Note.new, noteable: @animal } %>
 
-    <%= turbo_stream_from @animal, :notes %>
-    <%= tag.div id: "#{dom_id(@animal)}_notes" do %>
-      <%= render @animal.notes %>
-    <% end %>
-  </div>
+      <%= turbo_stream_from @animal, :notes %>
+      <%= tag.div id: "#{dom_id(@animal)}_notes" do %>
+        <%= render @animal.notes %>
+      <% end %>
+    </div>
+  <% end %>
 </div>
