--- a/app/views/medical_procedures/index.html.erb
+++ b/app/views/medical_procedures/index.html.erb
@@ -4,7 +4,7 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Procedures') %></h1>
-    <%= link_to t('menu.new'), new_medical_procedure_path, class: "primary_button" %>
+    <%= link_to t('menu.new'), new_medical_procedure_path, class: "primary_button" if policy(MedicalProcedure).new? %>
   </div>
 
   <div class="relative min-h-screen md:flex">
