--- a/app/views/admin_users/_admin_users_list.html.erb
+++ b/app/views/admin_users/_admin_users_list.html.erb
@@ -3,7 +3,7 @@
     <table class="mi_table" id="desk-table">
       <thead class="border border-l-0 border-r-0 border-gray-750">
         <tr>
-          <th class="header_th"><%= t('activerecord.attributes.admin_user.name') %></th>
+          <th class="header_th"><%= t('activerecord.attributes.admin_user.email') %></th>
           <th class="header_th"><%= t('forms.buttons.edit') %></th>
           <th class="header_th"><%= t('forms.buttons.delete') %></th>
         </tr>
