--- a/app/views/admin_users/new.html.erb
+++ b/app/views/admin_users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New admin user</h1>
+  <h1 class="font-bold text-4xl"><%= t('text.New') %> <%= t('text.Admin') %></h1>
 
   <%= render "form", admin_user: @admin_user %>
 </div>
