add duplicate animal function

--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -54,7 +54,7 @@
     </div>
   <% end %>
   <p class="body-sm-semibold-text">
-    <%= t('text.To add a sibling please select one from a drop-down list') %>
+    <%= t('text.To add a sibling please select one from the drop-down list; when duplicating, siblings will be preserved') %>
   </p>
   <div class="my-5">
     <%= form.label :sibling_id, class: "hidden" %>
